syntax = "proto3";

package api.v1.capsule;

import "google/protobuf/timestamp.proto";
import "model/author.proto";

message Build {
  string build_id = 1;
  string digest = 2;
  string repository = 3;
  string tag = 4;
  model.Author created_by = 5;
  google.protobuf.Timestamp created_at = 6;
  Origin origin = 7;
  map<string, string> labels = 8;
}

message GitReference {
  string repository_url = 1;
  string commit_sha = 2;
  string commit_url = 3;
}

message Origin {
  oneof kind {
    GitReference git_reference = 1;
  }
}
